--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<appSettings>
+		<add key ="filePath" value ="C:\data\TournamentTracker"/>
+	</appSettings>
 	<connectionStrings>
-		<add name ="Tournaments" connectionString ="Server=asdf;Database=Tournaments;Trusted_Connection=True;" providerName="System.Data.SQLClient"/>
+		<add name ="Tournaments" connectionString ="Server=localhost;Database=master;Trusted_Connection=True;" providerName="System.Data.SQLClient"/>
 	</connectionStrings>
 </configuration>
